--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>廣志の私帳</title>
+  <link href="https://bootswatch.com/5/cosmo/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  
+  <nav class="navbar navbar-dark bg-secondary">
+    <div class="container">
+      <a class="navbar-brand" href="/">廣志の私帳</a>
+    </div>
+  </nav>
+  {{{body}}}
+  <script src="https://kit.fontawesome.com/703350cdea.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
