--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,4 @@
 <div class="container mt-5">
   <h1>Welcome Back, {{userName}}</h1>
+  <a class="btn btn-outline-warning" href="./logout">Logout</a>
 </div>
