--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,16 +1,10 @@
 <div class="container mt-5">
-  <form action="/" method="POST">
+  <form action="/login" method="POST">
     <div class="d-flex flex-column justify-content-center">
       <div class="d-flex justify-content-center mt-3">
         <h1>Account Login</h1>
       </div>
-      <div class="d-flex flex-column align-items-center">
-        <div class="col-sm-5 ">
-          {{#if msg}}
-          <div class="alert alert-warning" role="alert">{{msg}}</div>
-          {{/if}}
-        </div>
-      </div>
+
       <div class="d-flex flex-column align-items-center">
         <div class="col-sm-3 ">
           <input type="text" class="form-control form-control-sm mt-3" placeholder="Email" name="email" id="email"
@@ -21,8 +15,15 @@
           <div class="invalid-feedback">Please enter your password</div>
         </div>
       </div>
-      
+      <div class="d-flex flex-column align-items-center">
+        <div class="col-sm-3">
+
+        </div>
+      </div>
       <div class="container d-flex justify-content-center mt-3">
+        {{#if msg}}
+        <a class="alert alert-warning p-0 m-2" role="alert">{{msg}}</a>
+        {{/if}}
         <button type="submit" class="btn btn-outline-warning m-2">Login</button>
       </div>
     </div>
